@@ -1,3 +1,8 @@
+2007-07-07  Tamas Nepusz  <ntamas@rmki.kfki.hu>
+
+	* interfaces/python/src/graphobject.c
+	(igraphmodule_Graph_layout_reingold_tilford_circular) : added
+
 2007-06-06  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* src/foreign.c (igraph_write_graph_pajek) : correct newline
